# sentinelCX

./: .env.example  .gitignore  README.md  pyproject.toml  test_dashboard.py
.claude/: settings.json
.github/workflows/: ci.yml
evaluation_data/: labeled_tickets.jsonl  routing_ground_truth.jsonl
knowledge_base/faqs/: account-management.md  billing-faq.md  common-issues.md
knowledge_base/policies/: data-retention.md  refund-policy.md  sla-terms.md
knowledge_base/products/: api-reference.md  integrations.md  mobile-app.md  platform-overview.md
seed_data/: generator.py  knowledge_base_content.py  seed.py  templates.py
src/sentinelcx/: __init__.py  config.py  orchestrator.py
src/sentinelcx/agents/: definitions.py  prompts.py
src/sentinelcx/api/: app.py
src/sentinelcx/api/routes/: dashboard.py  health.py  (+3 more)
src/sentinelcx/clients/: chatwoot_client.py  salesforce_client.py  slack_client.py
src/sentinelcx/dashboard/: event_bus.py  log_monitor.py  store.py
src/sentinelcx/evaluation/: accuracy.py  hallucination.py  human_review.py  routing.py
src/sentinelcx/knowledge/: indexer.py  search.py
src/sentinelcx/mcp_servers/: __init__.py  chatwoot_server.py  event_emitter.py  knowledge_base_server.py  salesforce_server.py  slack_server.py
src/sentinelcx/models/: __init__.py  customer.py  response.py  ticket.py
src/sentinelcx/skills/: __init__.py  compliance_check.md  product_knowledge.md  sentiment_analysis.md  utils.py
tests/: conftest.py
tests/integration/: test_health.py
tests/unit/: test_config.py  test_knowledge.py  test_models.py  test_skills.py
(+2 files in other folders)
